fix: events block spacing css updates EXLM-4411

--- a/styles/theme/event.css
+++ b/styles/theme/event.css
@@ -1,2 +1,13 @@
-/* stylelint-disable */
-/* stylelint-enable */
+body.event .section .browse-cards-block-content {
+  margin-bottom: 48px;
+}
+
+body.event .section > div > h2 {
+  margin-top: 0;
+}
+
+@media only screen and (min-width: 900px) {
+  body.event .section .browse-cards-block-content {
+    margin-bottom: 3rem;
+  }
+}
